<resources>
    <string name="app_name">Anythingz Delivery</string>
    <string name="Todays_Collection_Summary">Todays Collection Summary</string>
    <string name="Buffalo_Milk">Buffalo Milk</string>
    <string name="_0">0</string>
    <string name="_0_0">0.0</string>
    <string name="sampledate">2020-01-01</string>
    <string name="select">Select</string>
    <string name="Cow_Milk">Cow Milk</string>
    <string name="Avg_Fat">Avg Fat</string>
    <string name="Avg_Snf">Avg Snf</string>
    <string name="Total_Milk">Total Milk</string>
    <string name="Total_Amount">Total Amount</string>
    <string name="Farmer_Entry">Farmer Entry</string>
    <string name="Farmer_Code">Farmer Code</string>
    <string name="Farmer_Name">Farmer Name</string>
    <string name="Enter_Farmer_Code_Here">Enter Farmer Code Here..,</string>
    <string name="Enter_Farmer_Name_Here">Enter Farmer Name Here..,</string>
    <string name="Mobile_No">Mobile No.</string>
    <string name="Enter_Mobile_No_Here">Enter Mobile No. Here..,</string>
    <string name="Milk_Type">Milk Type</string>
    <string name="customer_type">Customer Type</string>
    <string name="Rate_Type">Rate Type</string>
    <string name="Select_Rate_Type">Select Rate Type</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>
    <string name="Back">Back</string>
    <string name="Next">Next</string>
    <string name="Export">Export to Excel</string>
    <string name="Register">Register</string>
    <string name="create_account">Create account</string>
    <string name="your_name">Your name</string>
    <string name="contact_number">Contact Number</string>
    <string name="branch_name">Branch Name</string>
    <string name="agentmobileno">Agent Mobile No.</string>
    <string name="village">Village</string>
    <string name="address">Address</string>
    <string name="email_address">Email_address</string>
    <string name="amount">Amount</string>
    <string name="remarks_reason">Remarks / Reason</string>
    <string name="select_date">Select Date</string>
    <string name="select_advance_for">Select advance for Customer / </string>
    <string name="select_type">Select Type</string>
    <string name="select_Customer_or_farmer">Select Farmer / Customer</string>
    <string name="select_Customer">Select Customer</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="customer_code">Customer Code</string>
    <string name="customer_name">Customer Name</string>
    <string name="active">Active Status</string>
    <string name="Customers">Customers</string>
    <string name="Collections">Collections</string>
    <string name="Farmers">Farmers</string>
    <string name="Rates">Rates</string>
    <string name="Advance">Advance</string>
    <string name="Reports">Reports</string>
    <string name="Sale">Sale</string>
    <string name="salecheckout">Sale Checkout</string>
    <string name="RegisterNotice">Register Notice</string>
    <string name="ForgetPassword">Forget Password</string>
    <string name="verifyotp">Verify OTP</string>
    <string name="save">Save</string>
    <string name="newpassword">New Password</string>
    <string name="trail">Trail Period : 10 Days  -  ₹0.0</string>
    <string name="standard">Standard Plan : 1 Year  -  ₹1000.0</string>
    <string name="trailsummary">* 20 Active Farmers \n* 1 Cow RateChart\n* 1 Buffalo RateChart\n* Thermal Bluetooth Print</string>
    <string name="standardsummary">* 200 Active Farmers \n* 1 Cow RateChart\n* 1 Buffalo RateChart\n* Thermal Bluetooth Print</string>
    <string name="registernotice1">This application is Developed for Milk Collection Dairy/Center Owners Only. with this application, Owner can manage Dairy Account including Daily Milk Collection, Cattle Feed, Advance/Loan, Farmer Payments. \n \nNote: This application is not useful for Others.</string>
    <string name="Enter_Milk_Type_Here">Enter Milk Type Here..,</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_user">Create User</string>
    <string name="conform_password">Conform Password</string>
    <string name="sign_in_to_continue">Sign in to Continue...</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="dairy_app_login">Dairy App Login</string>
    <string name="Password_hint">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sendotp">Send OTP</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="create_a_new_account">create a new account</string>
    <string name="products">product</string>
    <string name="product">Product</string>
    <string name="product_name">Product Name</string>
    <string name="mini_statement">mini</string>
    <string name="orders">ord</string>
    <string name="milk">milk</string>
    <string name="mobileno">Mobile No.</string>
    <string name="enternewpassword">New Password</string>
    <string name="enterconfirmpassword">Confirm Password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dashboard">Dashboard</string>
    <string name="menu">Menu</string>
    <string name="full_screen">Full Screen</string>
    <string name="switch_to_valuehiend">switch to valuehiend</string>
    <string name="switch_to_volume">switch to volume</string>
    <string name="Location">Location</string>
    <string name="settings">Settings</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="fatmin">FAT MIN</string>
    <string name="fatmax">FAT MAX</string>
    <string name="snfmin">SNF MIN</string>
    <string name="snfmax">SNF MAX</string>
    <string name="fatsnfmin">FAT &amp; SNF MIN</string>
    <string name="fatsnfmax">FAT &amp; SNF MAX</string>
    <string name="rate">Rate</string>
    <string name="edit">Edit</string>
    <string name="deviceid">Device Id</string>
    <string name="delete">Delete</string>
    <string name="action">Action</string>
    <string name="detailid">id</string>
    <string name="version">version : 1.0</string>
    <string name="warning">Warning !</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="do_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="Settings">Settings</string>
    <string name="add_advnace">Add Advance</string>
    <string name="add">Add</string>
    <string name="add_customer">Add Customer</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="add_farmer">Add Farmer</string>
    <string name="nomineedetails">Nominee Details</string>
    <string name="edit_farmer">Edit Farmer</string>
    <string name="edit_route">Edit Route</string>
    <string name="add_route">Add Route</string>
    <string name="edit_center">Edit Center</string>
    <string name="add_center">Add Center</string>
    <string name="membershipamount">Membership Amount</string>
    <string name="membershipamount2">Membership Amount</string>
    <string name="insuranceamount">Insurance Amount</string>
    <string name="insuranceamount2">Insurance Amount</string>
    <string name="farmername">Farmer Name</string>
    <string name="fathername">Father Name</string>
    <string name="nominee">Nominee Name</string>
    <string name="relation">Relation</string>
    <string name="farmerdateofbirth">Farmer Date of Birth</string>
    <string name="dob">Date of Birth</string>
    <string name="fatherdateofbirth">Father Date of Birth</string>
    <string name="aadharno">Aadhar Card No.</string>
    <string name="membership">Membership</string>
    <string name="farmer">Farmer</string>
    <string name="Insurance">Insurance</string>
    <string name="route">Route</string>
    <string name="center">Center</string>
    <string name="nodata">No Data</string>
    <string name="routecode">Route Code</string>
    <string name="centercode">Center Code</string>
    <string name="routename">Route Name</string>
    <string name="centername">Center Name</string>
    <string name="agentname">Agent Name</string>
    <string name="supervisor_name">Supervisor Name</string>
    <string name="title">Title</string>
    <string name="add_membership">Add Membership</string>
    <string name="edit_membership">Edit Membership</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="support">Support</string>
    <string name="category">Category</string>
    <string name="category_name">Category Name</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="category_description">Category Description</string>
    <string name="product_description">Product Description</string>
    <string name="enter_category_description">Enter Category Description</string>
    <string name="enter_product_description">Enter Product Description</string>
    <string name="price_description">Price Description</string>
    <string name="enter_price_description">Enter Price Description</string>
    <string name="category_icon">Category Icon</string>
    <string name="product_icon">Product Icon</string>
    <string name="menuid">menuid</string>
    <string name="menuname">menuname</string>
    <string name="product_type">Product Type</string>
    <string name="select_category">Select Category</string>
    <string name="enter_product_type">Enter Product Type</string>
    <string name="uom">UOM</string>
    <string name="enter_uom">Enter UOM</string>
    <string name="brand">Brand</string>
    <string name="enter_brand">Enter Brand</string>
    <string name="unitspercase">Units Per Case</string>
    <string name="enter_unitspercase">Enter Units Per Case</string>
    <string name="price">Price</string>
    <string name="enter_price">Enter Price</string>
    <string name="addPrice">Add Price</string>
    <string name="select_product">Select Product</string>
    <string name="sgst">SGST</string>
    <string name="enter_sgst">Enter SGST</string>
    <string name="cgst">CGST</string>
    <string name="enter_cgst">Enter CGST</string>
    <string name="igst">IGST</string>
    <string name="enter_igst">Enter IGST</string>
    <string name="other_tax">Other Tax</string>
    <string name="enter_other_tax">Enter Other Tax</string>
    <string name="discount">Discount</string>
    <string name="customername">Customer Name</string>
    <string name="customername_">Customer Name : </string>
    <string name="customerid">Customer Id</string>
    <string name="paymenttype">Payment Type</string>
    <string name="paymenttype_">Payment Type : </string>
    <string name="totalamount_">Total Amount : </string>
    <string name="totalamount">Total Amount</string>
    <string name="totalamount2">Total \n Amount</string>
    <string name="totaldiscountamount">Total Discount Amount</string>
    <string name="totaltaxamount">Total Tax Amount</string>
    <string name="status">Status</string>
    <string name="updatedon">Updated On</string>
    <string name="approveddate">Approved Date</string>
    <string name="approvedby">Approved By</string>
    <string name="geox">Geo X</string>
    <string name="geoy">Geo Y</string>
    <string name="date">Date</string>
    <string name="date_">Date : </string>
    <string name="saleid">Sale Id</string>
    <string name="totaldiscountpercentage">Total Discount Percentage</string>
    <string name="taxpercentage">Tax Percentage</string>
    <string name="taxamount">Tax Amount</string>
    <string name="offerid">Offer Id</string>
    <string name="batchno">Batch No</string>
    <string name="enter_discount">Enter Discount</string>
</resources>