<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:id="@+id/menucell"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/ac"
            android:padding="10dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            tools:ignore="MissingConstraints">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_"
                    android:textColor="@color/colourPrimary"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:id="@+id/date"
                    android:textStyle="bold"
                    android:textColor="@color/colourPrimary"
                    android:textSize="12sp" />
            </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paymenttype_"
                    android:textColor="@color/colourPrimary"
                    android:textSize="12sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paymenttype"
                    android:id="@+id/paymenttype"
                    android:textStyle="bold"
                    android:textColor="@color/colourPrimary"
                    android:textSize="12sp"/>
                    </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp10"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customername_"
                    android:gravity="center"
                    android:textColor="@color/colourPrimary"
                    android:textSize="12sp"
                   />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customername"
                android:id="@+id/customername"
                android:textStyle="bold"
                android:textColor="@color/colourPrimary"
                android:textSize="12sp"
                />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
               android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totalamount"
                    android:gravity="center"
                    android:textColor="@color/colourPrimary"
                    android:textSize="12sp"
                   />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:id="@+id/totalamount"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colourPrimary"
                android:textSize="12sp"
                 />
            </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/app_color"
                    android:layout_margin="@dimen/dp5"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/totaldiscountamount"
                        android:gravity="center"
                        android:textColor="@color/colourPrimary"
                        android:textSize="12sp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_0"
                        android:id="@+id/totaldiscountamount"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/colourPrimary"
                        android:textSize="12sp" />
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/app_color"
                    android:layout_margin="@dimen/dp5"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/totaltaxamount"
                        android:gravity="center"
                        android:textColor="@color/colourPrimary"
                        android:textSize="12sp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_0"
                        android:id="@+id/totaltaxamount"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/colourPrimary"
                        android:textSize="12sp"
                       />
                </LinearLayout>
            </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:id="@+id/status"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/colourPrimary"
                    android:textSize="12sp"
                    android:visibility="gone"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/updatedon"
                    android:id="@+id/updatedon"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/colourPrimary"
                    android:textSize="12sp"
                    android:visibility="gone"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/approveddate"
                    android:id="@+id/approveddate"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/colourPrimary"
                    android:textSize="12sp"
                    android:visibility="gone" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/approvedby"
                    android:id="@+id/approvedby"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/colourPrimary"
                    android:textSize="12sp"
                    android:visibility="gone" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/geox"
                    android:id="@+id/geox"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/colourPrimary"
                    android:textSize="12sp"
                    android:visibility="gone" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/geoy"
                    android:id="@+id/geoy"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/colourPrimary"
                    android:textSize="12sp"
                    android:visibility="gone" />
            </LinearLayout>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>